syntax = "proto3";

package notification;

option go_package = "github.com/charmingruby/doris/lib/proto/gen/notification";

import "google/protobuf/timestamp.proto";

enum EnvelopeType{
    UNSPECIFIED = 0;
    API_KEY_REQUEST = 1;
};

message APIKeyRequestContent {
  string verification_code = 1;
};

message Envelope {
  string id = 1;
  string to = 2;
  string from = 3;
  google.protobuf.Timestamp sent_at = 4;
  
  EnvelopeType type = 5;      

  oneof content {
    APIKeyRequestContent api_key_request = 6;
  }
};